<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".ui.addproduct.AddProductActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_product1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start| center"
                android:padding="16dp"
                android:src="@drawable/ic_back"
                android:textColor="@color/white" />


        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            style="@style/ETForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:lines="1"
            android:padding="10dp"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDescription"
            style="@style/ETForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/product_description"
            android:lines="3"
            android:padding="10dp"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPrice"
            style="@style/ETForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/product_price"
            android:inputType="numberDecimal"
            android:lines="1"
            android:padding="10dp"

            />

        <TextView
            android:id="@+id/tvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/image"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etImage"
            style="@style/ETForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/product_image"
            android:padding="10dp"

            />


        <androidx.cardview.widget.CardView
            android:id="@+id/cvImageProduct"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:visibility="invisible"
            app:cardCornerRadius="8dp"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />


        </androidx.cardview.widget.CardView>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        tools:visibility="visible"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:visibility= "gone"
        android:indeterminateTint="@color/white"
        android:id="@+id/pbAddProduct"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:text="Add Product"
        android:id="@+id/btnAddProduct"
        android:enabled="false"
        android:backgroundTint="@drawable/selector_button"
        />




</FrameLayout>